style: remove darkmode , fix body overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,15 +13,17 @@
   --font-jetbrains-mono: var(--font-jetbrains-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-jetbrains-mono);
+  position : relative;
 }
+
